@@ -2,6 +2,8 @@
   - 2.0.15 release
   - man page improvements in response to Debian bug #656676.  
     (acpid.8 acpi_listen.8)  (Ted Felix)
+  - makefile change to get rid of double slashes on install paths.
+    (Makefile)  (Gilles Espinasse)
 
 * Thu Dec 15 2011  Ted Felix <http://www.tedfelix.com>
   - 2.0.14 release
